--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<title>@woodandwhisker</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<body style="background: #71573a;">
+<div class="w3-container w3-center w3-margin-top w3-margin-left w3-margin-right w3-padding-large">
+
+  <img src="logo.png" alt="car" style="width: 96px;height: 96px;"  class="w3-circle" >
+  <h2 style="
+    margin-top: 0px;
+    color: rgb(234, 205, 158);
+    font-weight: 700;font-size: 20px;
+    line-height: 1.5;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    white-space-collapse: collapse;
+    text-wrap-mode: nowrap;
+    overflow-x: hidden;
+    overflow-y: hidden;">
+
+    @woodandwhisker
+  </h2>
+  <p style="margin-top: 0px;color: rgb(234, 205, 158);">
+    Art made with love and dog hair
+  </p>
+
+
+  <a style="width: 488px; background: rgb(238, 205, 158);"  target="_blank" class="w3-margin-top w3-btn w3-padding-16 w3-hover-black w3-border w3-round-xxlarge" href="https://www.tiktok.com/@woodandwhisker" >TikTok</a><br>
+  <a style="width: 488px; background: rgb(238, 205, 158);"  target="_blank" class="w3-margin-top w3-btn w3-padding-16 w3-hover-black w3-border w3-round-xxlarge" href="https://www.instagram.com/woodandwhisker/" >Instagram</a>
+  <a style="width: 488px; background: rgb(238, 205, 158);"  target="_blank" class="w3-margin-top w3-btn w3-padding-16 w3-hover-black w3-border w3-round-xxlarge" href="https://www.facebook.com/woodandwhisker/" >Facebook</a>
+
+   
+
+</div>
 </body>
 </html>
