--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 
   <a style="width: 488px; background: rgb(238, 205, 158);"  target="_blank" class="w3-margin-top w3-btn w3-padding-16 w3-hover-black w3-border w3-round-xxlarge" href="https://www.tiktok.com/@woodandwhisker" >TikTok</a><br>
-  <a style="width: 488px; background: rgb(238, 205, 158);"  target="_blank" class="w3-margin-top w3-btn w3-padding-16 w3-hover-black w3-border w3-round-xxlarge" href="https://www.instagram.com/woodandwhisker/" >Instagram</a>
-  <a style="width: 488px; background: rgb(238, 205, 158);"  target="_blank" class="w3-margin-top w3-btn w3-padding-16 w3-hover-black w3-border w3-round-xxlarge" href="https://www.facebook.com/woodandwhisker/" >Facebook</a>
+  <a style="width: 488px; background: rgb(238, 205, 158);"  target="_blank" class="w3-margin-top w3-btn w3-padding-16 w3-hover-black w3-border w3-round-xxlarge" href="https://www.instagram.com/woodandwhisker/" >Instagram</a><br>
+  <a style="width: 488px; background: rgb(238, 205, 158);"  target="_blank" class="w3-margin-top w3-btn w3-padding-16 w3-hover-black w3-border w3-round-xxlarge" href="https://www.facebook.com/woodandwhisker/" >Facebook</a><br>
 
    
 
